# coursework_5_2

coursework_5_2/: README.md  docker-compose.yaml  pyproject.toml
coursework_5_2/backend_django/ads/: permissions.py  urls.py
coursework_5_2/backend_django/ads/models/: __init__.py  ad.py  comment.py
coursework_5_2/backend_django/ads/serializers/: __init__.py  ad.py  comment.py
coursework_5_2/backend_django/ads/views/: __init__.py  ad.py  comment.py
coursework_5_2/backend_django/backend_django/: asgi.py  settings.py  urls.py  wsgi.py
coursework_5_2/backend_django/users/: models.py  serializers.py
coursework_5_2/backend_django/users/management/commands/: loadall.py
coursework_5_2/deploy/: docker-compose.yaml
